--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/mainLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.camera.view.PreviewView
-        android:id="@+id/myCameraPreview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <!--    <androidx.camera.view.PreviewView-->
+    <!--        android:id="@+id/myCameraPreview"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"/>-->
 
-    <Button
-        android:id="@+id/btnTakePhoto"
+    <!--    <Button-->
+    <!--        android:id="@+id/btnTakePhoto"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="75dp"-->
+    <!--        android:layout_marginBottom="50dp"-->
+    <!--        android:layout_marginHorizontal="32dp"-->
+    <!--        android:elevation="2dp"-->
+    <!--        android:text="@string/take_photo"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvDicomFiles"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="match_parent"
+        tools:itemCount="5"
+        tools:listitem="@layout/item_dicom" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnCreate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginHorizontal="32dp"
-        android:elevation="2dp"
-        android:text="@string/take_photo"
+        android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
