--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!--    <androidx.camera.view.PreviewView-->
-    <!--        android:id="@+id/myCameraPreview"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"/>-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/btnTakePhoto"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="75dp"-->
-    <!--        android:layout_marginBottom="50dp"-->
-    <!--        android:layout_marginHorizontal="32dp"-->
-    <!--        android:elevation="2dp"-->
-    <!--        android:text="@string/take_photo"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--        app:layout_constraintRight_toRightOf="parent" />-->
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDicomFiles"
         android:layout_width="match_parent"
@@ -38,6 +21,16 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="50dp"
         android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnOpen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="125dp"
+        android:src="@drawable/ic_open"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
