--- a/app/src/main/res/layout/activity_dicom_viewer.xml
+++ b/app/src/main/res/layout/activity_dicom_viewer.xml
@@ -6,34 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".DicomViewerActivity">
 
-    <TextView
-        android:id="@+id/tvPatientName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="10dp"
-        android:padding="10dp"
-        android:background="@color/black"
-        android:text="@string/ben_wilson"
-        android:textColor="@color/white"/>
-
     <ImageView
         android:id="@+id/imgDicom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_info"/>
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_info"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tvPatientName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/black"
+        android:padding="10dp"
+        android:text="@string/ben_wilson"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
+        android:id="@+id/sbImageChanger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:minHeight="15dp"
-        android:minWidth="15dp"
-        android:maxHeight="15dp"
         android:maxWidth="15dp"
-        android:thumb="@drawable/custom_thumb"
+        android:maxHeight="15dp"
+        android:minWidth="15dp"
+        android:minHeight="15dp"
         android:progressDrawable="@drawable/custom_seekbar"
+        android:thumb="@drawable/custom_thumb"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 
@@ -41,10 +44,11 @@
         android:id="@+id/btnInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_info"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
